[package]
name = "mkultra-socket"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["macros","rt-multi-thread"] }
tokio-tungstenite = { version = "0.18.0" }
futures-util = "0.3.28"
pin-project = "1.0.12"
futures-channel = "0.3.28"
rusqlite = "0.29.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
secp256k1 = { version = "0.26", features = ["bitcoin_hashes", "global-context", "rand-std"] }
sha256 = "1.1.2"
thiserror = "1.0.40"
mkultra = { path = '../mkultra'}